# simple-logger

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
simple_logger/: __init__.py  logger.py
